<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cloudnets.cloudacademic.Views.Login"
    android:id="@+id/contenedor_login"
    android:background="#ff2384bb">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/contenedor_logo"
        android:layout_above="@+id/contenedor_credenciales"
        android:layout_centerHorizontal="true"
        android:gravity="bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_login"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo3" />

        <Space
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/contenedor_credenciales"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:id="@+id/contenedor_user"
            android:background="@drawable/bordes_text"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_user"
                android:paddingLeft="5dp"
                android:contentDescription="@android:string/ok"
                android:paddingTop="5dp" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:ems="10"
                android:id="@+id/txtUsuario"
                android:inputType="textPersonName"
                android:textColor="@color/primary_dark_color"
                android:textColorHint="#d7307bab"
                android:hint="@string/usuario"
                android:gravity="center"
                android:maxLines="1"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="22dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:id="@+id/contenedor_password"
            android:background="@drawable/bordes_text"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_pass"
                android:contentDescription="@android:string/ok"
                android:paddingTop="5dp"
                android:paddingLeft="5dp" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtContrasena"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary_dark_color"
                android:textColorHint="#d7307bab"
                android:hint="@string/contrasena"
                android:maxLines="1"
                android:gravity="center" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="22dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contenedor_but_validar"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/validar"
                android:id="@+id/butValidar"
                android:background="@drawable/bordes_button"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
