<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudnets.cloudacademic.Views.ListaEstudiantes"
    android:background="#ff2384bb"
    android:id="@+id/contenedor_lista_estudiantes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedor_elementos_estudiantes">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/contenedor_icono_perfil"
            android:paddingLeft="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/contenedor_menu"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/iconRegresarMenu"
                    android:src="@drawable/titulo"
                    android:contentDescription="@string/icon_perfil"
                    android:background="#001e6893"
                    android:layout_gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/contenedor_user"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/contenedor_info"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/lblTipoUsuarioLista"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/lblNombresLista"
                        android:gravity="center" />

                </LinearLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconoDatosPerfil"
                    android:contentDescription="@string/icon_perfil"
                    android:background="#001e6893"
                    android:src="@drawable/user"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/contenedor_filtro"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center">

            <Spinner
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/spCursos"
                android:layout_gravity="center_vertical" />

            <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:text="@string/guardar"
                android:id="@+id/butGuardar"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bordes_button"
                android:textColor="#226183" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contenedor_fragmen">

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:background="@drawable/sombras_elementos"
                android:id="@+id/sombra"
                android:paddingBottom="3dp">
            </View>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/contenedor_lista">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lblTitulo"
                android:layout_gravity="center_horizontal"
                android:text="@string/Filtro"
                android:paddingTop="5dp"
                android:textSize="20sp"
                android:paddingBottom="8dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollEstudiantes"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contenedor_tarjetas"></LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
