<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudnets.cloudacademic.Views.Principal"
    android:id="@+id/contenedor_principal"
    android:background="#ff2384bb">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedor_elementos">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/contenedor_icono_perfil"
            android:paddingLeft="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/contenedor_menu"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/iconMenuPrincipal"
                    android:src="@drawable/titulo"
                    android:contentDescription="@string/icon_perfil"
                    android:background="#001e6893"
                    android:layout_gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/contenedor_user"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/contenedor_info"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/lblTipoUsuario"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/lblNombres" />

                </LinearLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconoPerfil"
                    android:contentDescription="@string/icon_perfil"
                    android:background="#001e6893"
                    android:src="@drawable/user"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contenedor_fragmen">

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:background="@drawable/sombras_elementos"
                android:id="@+id/sombra">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/lblTituloPagina"
                android:text="@string/principal"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingBottom="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/contenedor_tarjeta_info"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView"
                android:layout_gravity="top">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contenedor_lista_menu">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_menu_1"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        card_view:cardElevation="10dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardBackgroundColor="#ffffff" >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/contenedor_card_menu_1"
                            android:gravity="center|start"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/asistencia"
                                android:contentDescription="@string/icon_perfil"
                                android:scaleType="centerCrop"
                                android:id="@+id/imgLista"
                                android:layout_gravity="center_vertical" />

                            <TextView
                                android:id="@+id/lblTituloTarjeta1"
                                android:layout_width="170dp"
                                android:layout_height="wrap_content"
                                android:text="@string/asistencia_titulo"
                                android:textColor="#226592"
                                android:textSize="30sp"
                                android:paddingLeft="8dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/contenedor_next1"
                                android:gravity="center|end">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/imgFlecha"
                                    android:contentDescription="@string/icon_perfil"
                                    android:src="@drawable/next2"
                                    android:layout_gravity="right" />
                            </LinearLayout>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/espacion_menu_1" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_menu_2"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        card_view:cardElevation="10dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardBackgroundColor="#ffffff" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/contenedor_card_menu_2"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center|start"
                            android:baselineAligned="false">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/agenda"
                                android:contentDescription="@string/icon_perfil"
                                android:scaleType="centerCrop"
                                android:id="@+id/imgAgenda"
                                android:layout_gravity="center_vertical" />

                            <TextView
                                android:id="@+id/lblTituloTarjeta2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/agenda_titulo"
                                android:textColor="#226592"
                                android:textSize="30sp"
                                android:paddingLeft="8dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/contenedor_next2"
                                android:gravity="center|end">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:id="@+id/imgFlecha2"
                                    android:contentDescription="@string/icon_perfil"
                                    android:src="@drawable/next2"
                                    android:layout_gravity="right" />
                            </LinearLayout>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
